trunk/Archive2/1a/ef051a5730d78a/output
main.cpp: In instantiation of 'S<T>::S(std::initializer_list<_Tp>) [with T = int]':
main.cpp:23:30:   required from here
main.cpp:8:58: error: no matching function for call to 'std::array<int, 4ul>::array(std::initializer_list<int>&)'
     S(std::initializer_list<T> l) : v(std::array<T, 4>(l)) {
                                                          ^
main.cpp:8:58: note: candidates are:
In file included from main.cpp:2:0:
/usr/include/c++/4.8/array:81:12: note: std::array<int, 4ul>::array()
     struct array
            ^
/usr/include/c++/4.8/array:81:12: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/array:81:12: note: constexpr std::array<int, 4ul>::array(const std::array<int, 4ul>&)
/usr/include/c++/4.8/array:81:12: note:   no known conversion for argument 1 from 'std::initializer_list<int>' to 'const std::array<int, 4ul>&'
/usr/include/c++/4.8/array:81:12: note: constexpr std::array<int, 4ul>::array(std::array<int, 4ul>&&)
/usr/include/c++/4.8/array:81:12: note:   no known conversion for argument 1 from 'std::initializer_list<int>' to 'std::array<int, 4ul>&&'
